ping/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ping
spec:
  rules:
    - host: ping.prod.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ping
                port:
                  number: 8080
